# HaloMCCModdedLobbyBrowser

./: .env.example  .gitignore  CODE_DUMP.txt  README.md  netlify.toml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
components/: BrowseView.tsx  BrowseViewClient.tsx  DevChecklist.tsx  DmChat.tsx  FadeInImage.tsx  FavoriteWeaponSelect.tsx  FriendsView.tsx  GamertagLink.tsx  HeaderShell.tsx  HostDashboard.tsx  HostLobbyEditForm.tsx  HostLobbyForm.tsx  HostLobbyNotifications.tsx  HostNavLink.tsx  HostNotificationToggle.tsx  HostNotificationsProvider.tsx  HostPageHeader.tsx  ImageCropUpload.tsx  LiveStatus.tsx  LobbyBackground.tsx  LobbyBackgroundPan.tsx  LobbyCardBackground.tsx  LobbyChat.tsx  LobbyMapImage.tsx  LobbyMemberPanel.tsx  LobbyRequestForm.tsx  LobbyRoster.tsx  LobbyRosterLive.tsx  MapImageUploader.tsx  MapPreview.tsx  OverlayAutoRefresher.tsx  OverlayDiagnostics.tsx  OverlayGlassShell.tsx  OverlayHeader.tsx  OverlayHeaderControls.tsx  OverlayLobbyTelemetryLine.tsx  OverlayLobbyTelemetrySlots.tsx  OverlayModal.tsx  OverlayPresenceHeartbeat.tsx  OverlayTelemetryProvider.tsx  (+17 more)
mcc-telemetry-mod-stub/: CMakeLists.txt  README.md
mcc-telemetry-mod-stub/config/: telemetry_mod_settings.json
mcc-telemetry-mod-stub/include/: HttpClientWinHttp.h  OfficialApiAdapter.h  Settings.h  TelemetryContract.h  TelemetryMod.h
mcc-telemetry-mod-stub/src/: HttpClientWinHttp.cpp  MCC_PlayerCountOverlay.cpp  OfficialApiAdapter.cpp  PluginExports.cpp  Settings.cpp  TelemetryContract.cpp  TelemetryMod.cpp
(+207 files in other folders)
